Added partial auth guard, added manage items page, improved design

--- a/src/app/buttons/buttons.page.scss
+++ b/src/app/buttons/buttons.page.scss
@@ -65,3 +65,6 @@ ion-card-header{
 .summaryicon{
     background: hsla(0, 0%, 100%, 0) url('../../assets/images/summary.png') no-repeat center center / cover;
 }
+.manageicon{
+    background: hsla(0, 0%, 100%, 0) url('../../assets/images/manage.png') no-repeat center center / cover;
+}
