--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -21,6 +21,10 @@
             <ion-ripple-effect></ion-ripple-effect>
             Student History
         </ion-button>
+        <ion-button color="primary" size="default" fill="solid" (click)="viewManageItems()">
+            <ion-ripple-effect></ion-ripple-effect>
+            Manage Items
+        </ion-button>
         <ion-button slot="end" color="warning" size="default" fill="solid" (click)="logout()">
             <ion-ripple-effect></ion-ripple-effect>
             Log Out
