--- a/src/app/fill-order/fill-order.page.html
+++ b/src/app/fill-order/fill-order.page.html
@@ -21,27 +21,27 @@
             <ion-item lines="none">
                 <ion-item class="firstitem" lines="inset">
                     <ion-label position="floating">Item #1</ion-label>
-                    <ion-select interface="alert" [(ngModel)]="entry.item1" [interfaceOptions]="dropdownOptions" (ionChange)="selectChange(entry)" placeholder="Select Item">
+                    <ion-select interface="alert" [(ngModel)]="entry.item1" [selectedText]="entry.item1" [interfaceOptions]="dropdownOptions" (ionChange)="selectChange(entry,1)" placeholder="Select Item">
                         <ion-select-option>--None--</ion-select-option>
-                        <ion-select-option *ngFor="let item of items">{{item}}</ion-select-option>
+                        <ion-select-option *ngFor="let item of items" [value]="item.name">{{item.name}}    (Rs.{{item.cost}})</ion-select-option>
                     </ion-select>
                 </ion-item>
                 <ion-item slot = "end" lines="inset">
                     <ion-label position="floating">Cost #1 (Rs)</ion-label>
-                    <ion-input [(ngModel)]="entry.item1_cost" type="number"></ion-input>
+                    <ion-input [(ngModel)]="entry.item1_cost" disabled=true type="number"></ion-input>
                 </ion-item>
             </ion-item>
             <ion-item lines="none">
                 <ion-item class="firstitem" lines="inset">
                     <ion-label position="floating">Item #2</ion-label>
-                   <ion-select interface="alert" [(ngModel)]="entry.item2" (ionChange)="selectChange(entry)" placeholder="Select Item">
+                   <ion-select interface="alert" [(ngModel)]="entry.item2" [selectedText]="entry.item2" [interfaceOptions]="dropdownOptions" (ionChange)="selectChange(entry,2)" placeholder="Select Item">
                         <ion-select-option>--None--</ion-select-option>
-                        <ion-select-option *ngFor="let item of items">{{item}}</ion-select-option>
+                        <ion-select-option *ngFor="let item of items" [value]="item.name">{{item.name}}    (Rs.{{item.cost}})</ion-select-option>
                     </ion-select>
                 </ion-item>
                 <ion-item slot = "end" lines="inset">
                     <ion-label position="floating">Cost #2 (Rs)</ion-label>
-                    <ion-input [(ngModel)]="entry.item2_cost" type="number"></ion-input>
+                    <ion-input [(ngModel)]="entry.item2_cost" disabled=true type="number"></ion-input>
                 </ion-item>
             </ion-item>
         </ion-card>
