--- a/src/app/buttons/buttons.page.html
+++ b/src/app/buttons/buttons.page.html
@@ -67,12 +67,12 @@
           </ion-card>
         </ion-col>
         <ion-col>
-          <ion-card [class.startgrow]="growflag">
+          <ion-card [class.startgrow]="growflag" (click)="viewManageItems()">
             <ion-card-header>
               Manage Items
               </ion-card-header>
             <ion-card-content>
-              <div class="iconpos">X</div>
+              <div class="iconpos manageicon"></div>
             </ion-card-content>
           </ion-card>
         </ion-col>
