Added verify students page and improved design

--- a/src/app/buttons/buttons.page.html
+++ b/src/app/buttons/buttons.page.html
@@ -17,7 +17,7 @@
         <ion-col>
           <ion-card [class.startgrow]="growflag" (click)="createMenu()">
             <ion-card-header>
-            Create Menu
+            Menu
             </ion-card-header>
             <ion-card-content>
               <div class="iconpos createicon"></div>
@@ -47,12 +47,12 @@
       </ion-row>
       <ion-row>
         <ion-col>
-          <ion-card [class.startgrow]="growflag" (click)="viewMenu()">
+          <ion-card [class.startgrow]="growflag" (click)="viewVerify()">
             <ion-card-header>
-              View Old Menu
+              Verify Students
             </ion-card-header>
             <ion-card-content>
-              <div class="iconpos pastmenuicon"></div>
+              <div class="iconpos verifyicon"></div>
             </ion-card-content>
           </ion-card>
         </ion-col>
