--- a/src/app/buttons/buttons.page.scss
+++ b/src/app/buttons/buttons.page.scss
@@ -59,8 +59,8 @@ ion-card-header{
 .pastordersicon{
     background: hsla(0, 0%, 100%, 0) url('../../assets/images/pastorders.png') no-repeat center center / cover;
 }
-.pastmenuicon{
-    background: hsla(0, 0%, 100%, 0) url('../../assets/images/pastmenu.png') no-repeat center center / cover;
+.verifyicon{
+    background: hsla(0, 0%, 100%, 0) url('../../assets/images/verify.png') no-repeat center center / cover;
 }
 .summaryicon{
     background: hsla(0, 0%, 100%, 0) url('../../assets/images/summary.png') no-repeat center center / cover;
