--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -3,15 +3,15 @@
         <div class="chefico" (click)="viewButtons()"></div>
         <ion-button color="primary" size="default" fill="solid" (click)="createMenu()">
             <ion-ripple-effect></ion-ripple-effect>
-            Create Menu
+            Menu
         </ion-button>
         <ion-button color="primary" size="default" fill="solid" (click)="viewOrders()">
             <ion-ripple-effect></ion-ripple-effect>
             View Orders
         </ion-button>
-        <ion-button color="primary" size="default" fill="solid" (click)="viewMenu()">
+        <ion-button color="primary" size="default" fill="solid" (click)="viewVerify()">
             <ion-ripple-effect></ion-ripple-effect>
-            View Old Menu
+            Verify Students
         </ion-button>
         <ion-button color="primary" size="default" fill="solid" (click)="viewMonthlySummary()">
             <ion-ripple-effect></ion-ripple-effect>
