--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,14 +1,21 @@
 ion-content{
     text-align: center;
+    --background: #fff url('../../assets/images/allbg.jpg') no-repeat center center / cover;
 }
-
+ion-toolbar{
+    --background: rgb(0, 162, 255);
+    color: white;
+}
 ion-card-title{
     font-size: 40px;
 }
-
 ion-card{
-    margin-left: 25%;
-    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 34%;
+    height: 62%;
+    margin-top: 0%;
+    background: white;
 }
 ion-button{
     margin-top: 40px;
