--- a/src/app/manage-items/manage-items.page.scss
+++ b/src/app/manage-items/manage-items.page.scss
@@ -1,10 +1,12 @@
 ion-content{
     text-align: center;
+    --background: #fff url('../../assets/images/vadabg.jpg') no-repeat center center / cover;
 }
 ion-card{
     width: 70%;
     margin-left: auto;
     margin-right: auto;
+    background: white;
 }
 ion-card-header{
     text-align: center;
