--- a/src/app/manage-items/manage-items.page.html
+++ b/src/app/manage-items/manage-items.page.html
@@ -7,7 +7,7 @@
     <ion-card-header>
         MANAGE ITEMS
         <ion-item lines="none">
-          <ion-icon class="trashicon" name="add-circle" color="primary" (click)="addItem()"></ion-icon>
+          <ion-icon class="trashicon" name="add-circle" color="primary" (click)="showForm()"></ion-icon>
           <ion-label>Add item</ion-label>
         </ion-item>
     </ion-card-header>
@@ -20,10 +20,10 @@
         <ion-icon name="trash" color="danger"></ion-icon>
       </ion-item>
       <ion-list>
-        <ion-item *ngFor="let item of items">
+        <ion-item *ngFor="let item of items; let i = index" class="items">
           <ion-label>{{item.name}}</ion-label>
-          <ion-item lines="inset"><ion-input type="number" [(ngModel)]="item.cost"></ion-input></ion-item>
-          <ion-label> </ion-label>
+          <ion-label>{{item.cost}}</ion-label>
+          <ion-icon class="editicon" name="create" slot="end" (click)="showForm(item,i)"></ion-icon>
           <ion-icon class="trashicon" name="trash" slot="end" (click)="delete(item)"></ion-icon>
         </ion-item>
       </ion-list>
