--- a/src/app/verify-students/verify-students.page.html
+++ b/src/app/verify-students/verify-students.page.html
@@ -13,4 +13,5 @@
       <ion-label>{{entry.code}}</ion-label>
     </ion-item>
   </ion-list>
+  <ion-button (click)="refresh()">Refresh</ion-button>
 </ion-content>
