--- a/src/app/verify-students/verify-students.page.html
+++ b/src/app/verify-students/verify-students.page.html
@@ -9,8 +9,8 @@
       <ion-label>Code</ion-label>
     </ion-item>
     <ion-item *ngFor="let entry of data">
-      <ion-label>{{entry.regnum}}</ion-label>
-      <ion-label>{{entry.code}}</ion-label>
+      <ion-label>{{entry.Username}}</ion-label>
+      <ion-label>{{entry.Code}}</ion-label>
     </ion-item>
   </ion-list>
   <ion-button (click)="refresh()">Refresh</ion-button>
