--- a/src/app/summary/summary.page.scss
+++ b/src/app/summary/summary.page.scss
@@ -1,6 +1,3 @@
-ion-content{
-    overflow-y: hidden;
-}
 .head{
     margin-inline-start: 40%;
     font-size: 30px;
@@ -9,13 +6,14 @@ mat-form-field{
     margin-inline-start: 30px;
     margin-inline-end: 30px;
 }
+ion-button{
+    margin-left: 40px;
+    margin-top: -20px;
+}
 .searchbar{
     width: 40%;
     margin-left: auto;
     margin-right: auto;
-}
-.baritem{
-    margin-top: -20px;
 }
 table{
     font-size: 11px;
@@ -36,20 +34,14 @@ th, td {
     overflow-x: auto;
     overflow-y: auto;
     text-align: center;
-}
-.studentcard{
     width: 60%;
-    max-height: 70%;
+    max-height: 400px;
 }
 .regnums{
     cursor: pointer;
 }
 .regnums:hover{
     background: rgb(231, 231, 231);
-}
-.itemcard{
-    width: 60%;
-    max-height: 70%;
 }
 .itemicon{
     margin-left: 10px;
