Auth without session. Design bug fixes for IE.

--- a/src/app/fill-order/fill-order.page.scss
+++ b/src/app/fill-order/fill-order.page.scss
@@ -6,7 +6,7 @@ ion-content{
     --background: none;
 }
 .head{
-    margin-inline-start: 32%;
+    margin-left: 32%;
     font-size: 30px;
 }
 ion-list{
