--- a/src/app/buttons/buttons.page.html
+++ b/src/app/buttons/buttons.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-item lines="none">
         <div class="chefico" (click)="viewButtons()"></div>
-        <div class="head">MEGA HOSTEL MESS</div>
+        <div class="head">{{user.messname}}</div>
         <ion-button slot="end" color="warning" size="default" fill="solid" (click)="logout()">
             <ion-ripple-effect></ion-ripple-effect>
             Log Out
