--- a/src/app/summary/summary.page.scss
+++ b/src/app/summary/summary.page.scss
@@ -1,14 +1,13 @@
 .head{
-    margin-inline-start: 40%;
+    margin-left: 40%;
     font-size: 30px;
 }
 mat-form-field{
-    margin-inline-start: 30px;
-    margin-inline-end: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 ion-button{
     margin-left: 40px;
-    margin-top: -20px;
 }
 .searchbar{
     width: 40%;
