--- a/src/global.scss
+++ b/src/global.scss
@@ -21,7 +21,7 @@ ion-item{
     width: 38.6px;
     height: 39.6px;
     background: #fff url('./assets/images/chefico.png') no-repeat center center / cover;
-    margin-inline-end: 20px;
+    margin-right: 20px;
     cursor: pointer;
 }
 .calenderico{
