Added slot for snacks

--- a/src/app/order-history/order-history.page.html
+++ b/src/app/order-history/order-history.page.html
@@ -22,7 +22,7 @@
       </ion-item>
     </ion-list>
   </ion-card>
-  <ion-list *ngIf="months.length">
+  <ion-list class="list" *ngIf="months.length">
       <ion-list-header>
         <ion-label>Register number: {{numbersearched}}</ion-label>
       </ion-list-header>
