--- a/src/app/order-history/order-history.page.scss
+++ b/src/app/order-history/order-history.page.scss
@@ -13,6 +13,10 @@ ion-card{
     width: 20%;
     float: left;
 }
+.list{
+    float: left;
+    width: 70%;
+}
 .monthsitem:hover{
     --background:lightgrey;
 }
