--- a/src/app/order-history/order-history.page.scss
+++ b/src/app/order-history/order-history.page.scss
@@ -1,5 +1,5 @@
 .head{
-    margin-inline-start: 40%;
+    margin-left: 40%;
     font-size: 30px;
 }
 ion-searchbar{
@@ -12,6 +12,10 @@ ion-button{
 ion-card{
     width: 20%;
     float: left;
+}
+.list{
+    float: left;
+    width: 70%;
 }
 .monthsitem:hover{
     --background:lightgrey;
