--- a/src/app/manage-items/manage-items.page.html
+++ b/src/app/manage-items/manage-items.page.html
@@ -2,7 +2,7 @@
   <app-toolbar></app-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content class="ion-padding">
   <ion-card>
     <ion-card-header>
         MANAGE ITEMS
@@ -38,6 +38,6 @@
       </ion-list>
     </ion-card-content>
   </ion-card>
-  <ion-button color="primary" (click)="updateItems()">Update</ion-button>
-  <ion-button color="warning" (click)="reset()">Reset all changes</ion-button>
+  <ion-button color="primary" (click)="updateMenu()">Update</ion-button>
+  <ion-button color="warning" (click)="getData()">Reset all changes</ion-button>
 </ion-content>
