--- a/src/app/verify-students/verify-students.page.html
+++ b/src/app/verify-students/verify-students.page.html
@@ -2,7 +2,7 @@
   <app-toolbar></app-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content class="ion-padding">
   <ion-list lines="inset">
     <ion-item>
       <ion-label>Register Number</ion-label>
