--- a/src/app/order-history/order-history.page.html
+++ b/src/app/order-history/order-history.page.html
@@ -2,7 +2,7 @@
   <app-toolbar></app-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content class="ion-padding">
   <ion-item lines="none">  
     <ion-label class="head">
         STUDENT HISTORY
