--- a/src/app/orders/orders.page.html
+++ b/src/app/orders/orders.page.html
@@ -2,7 +2,7 @@
   <app-toolbar></app-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content class="ion-padding">
   <ion-row>
     <ion-col>
         <ion-card>
